[gd_scene load_steps=5 format=2]

[ext_resource path="res://guns/Complex.gd" type="Script" id=1]
[ext_resource path="res://font/romulus.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
extra_spacing_space = -3
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Barrel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}

[node name="Complex" type="Node2D"]
script = ExtResource( 1 )

[node name="Barrel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Barrel"]
margin_left = -42.8541
margin_top = -25.265
margin_right = 93.1459
margin_bottom = 23.735
rect_min_size = Vector2( 100, 20 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.976471, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.737255, 0.482353, 0, 1 )
custom_constants/line_spacing = -7
text = "| a +       >"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Barrel"]
margin_left = 9.55457
margin_top = -25.2227
margin_right = 53.5546
margin_bottom = 23.7773
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.976471, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.737255, 0.482353, 0, 1 )
custom_constants/line_spacing = -7
text = "15i"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 63.0261, 0.109483 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
